# karaoke-app

./: .circuit_breaker_history  .circuit_breaker_state  .claudignore  .exit_signals  .gitignore  .response_analysis  @AGENT.md  @fix_plan.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  PROMPT.md  README.md  eslint.config.js  index.html  justfile  package-lock.json  package.json  playwright.config.ts  progress.json  progress.txt  status.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/commands/: project-review.md
.github/workflows/: e2e-tests.yml  release.yml
docs/: APP_SIGNALS.md  DESIGN_SYSTEM.md  youtube-embed-tauri-research.md
logs/: README.md
openspec/specs/hosted-session-requests/: spec.md
plan/: 00-overview.md  01-foundation.md  02-youtube.md  03-sessions.md  04-display.md  05-local-files.md  05-local-library.md  06-downloads.md  08-polish.md  201-host-session-tasks.md  201-host-session.md  207-app-signals.md  README.md  architecture.md  deployment.md  desktop-app-authentication-prd.md  desktop-app-authentication-tasks.md  hosted-session-restoration.md  permanent-shuffle.md  reopen-hosted-session.md  schema.md  song-request-approval.md  ui-reference.md
plan/archive/: 07-usb-drives.md
plan/future/: airplay.md  cloud-playlists.md  favorites.md  host-session-implementation.md  lyrics.md  offline-mode.md  popular-songs.md  qr-requests.md  singer-rotation.md  singer-stats.md  smart-playlists.md  voting.md
plan/yt-compatible/: plan.md
ralph/: afk.sh  app-signals-hosted-session.json  app-signals.json  hosted-session-restoration-review.json  hosted-session-restoration.json  once.sh  permanent-shuffle.json  prd-to-tasks.sh  reopen-hosted-session.json  song-request-approval.json
scripts/: build-and-release.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  display.rs  errors.rs  favorites.rs  feedback.rs  keep_awake.rs  library.rs  media_controls.rs  mod.rs  queue.rs  redaction.rs  search_history.rs  session.rs  settings.rs  update.rs  youtube.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/services/: display_watcher.rs  ffmpeg.rs  library_scanner.rs  media_controls.rs  metadata_fetcher.rs  mod.rs  youtube_api.rs  ytdlp.rs
src/components/: DependencyCheck.tsx
src/components/auth/: AuthStatus.tsx  SignInModal.tsx  SignInPrompt.tsx  UserMenu.tsx  index.ts
src/components/display/: DisplayRestoreDialog.tsx  index.ts
src/components/favorites/: FavoriteStar.tsx  LoadFavoritesDialog.tsx  ManageFavoritesDialog.tsx  index.ts
src/components/feedback/: FeedbackDialog.test.tsx  FeedbackDialog.tsx  index.ts
src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  index.ts
src/components/notification/: NotificationBar.tsx
src/components/player/: CurrentSingerOverlay.test.tsx  CurrentSingerOverlay.tsx  DetachedPlayer.tsx  NativePlayer.test.tsx  NativePlayer.tsx  NextSongOverlay.test.tsx  NextSongOverlay.tsx  PlayerControls.test.tsx  PlayerControls.tsx  VideoPlayer.tsx  (+5 more)
src/constants/: config.ts  index.ts  singerColors.ts
src/hooks/: index.ts  useDisplayWatcher.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMediaControls.ts  useUpdateCheck.ts  useWakeLock.ts
src/services/: appSignals.test.ts  appSignals.ts  auth.ts  displayManager.ts  favorites.ts  feedback.test.ts  feedback.ts  hostedSession.test.ts  hostedSession.ts  index.ts  keepAwake.ts  logger.ts  mediaControls.ts  queue.ts  session.ts  supabase.ts  update.ts  windowManager.ts  youtube.ts  youtubeIframe.test.ts  youtubeIframe.ts
src/stores/: appStore.ts  authStore.test.ts  authStore.ts  displayStore.test.ts  displayStore.ts  favoritesStore.test.ts  favoritesStore.ts  feedbackStore.ts  index.ts  libraryStore.ts  notificationStore.signals.test.ts  notificationStore.ts  playerStore.signals.test.ts  playerStore.ts  queueStore.fairQueue.test.ts  queueStore.signals.test.ts  queueStore.ts  searchHistoryStore.ts  sessionStore.activeSinger.test.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.test.ts  settingsStore.ts  updateStore.ts
src/styles/: zIndex.ts
src/test/: setup.ts
src/types/: index.ts  songRequest.ts  tauri.d.ts  youtube-iframe.d.ts  youtube.ts
tests/e2e/: GUIDE.md  README.md
(+50 files in other folders)
