[package]
name = "homekaraoke"
version = "0.5.8-beta"
description = "Home karaoke application"
authors = ["Piotr Zalewa"]
license = "MIT"
repository = "https://github.com/zalun/karaoke-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "homekaraoke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
keepawake = "0.5"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
souvlaki = "0.8"

# Linux uses zbus for MPRIS media controls (pure Rust D-Bus implementation)
[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
