[package]
name = "homekaraoke"
version = "0.6.2"
description = "Home karaoke application"
authors = ["Piotr Zalewa"]
license = "MIT"
repository = "https://github.com/zalun/karaoke-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "homekaraoke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-localhost = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
url = "2"
urlencoding = "2"
keepawake = "0.5"
sha2 = "0.10"
# Use rustls-tls instead of native-tls to fix macOS connection issues with some APIs (e.g., Lrclib)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
souvlaki = "0.8"

# Linux uses zbus for MPRIS media controls (pure Rust D-Bus implementation)
[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }

# Windows uses Windows Media Controls (automatic, no special features needed)
[target.'cfg(target_os = "windows")'.dependencies]
souvlaki = "0.8"
