[package]
name = "homekaraoke"
version = "0.7.3"
description = "Home karaoke application"
authors = ["Piotr Zalewa"]
license = "MIT"
repository = "https://github.com/zalun/karaoke-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "homekaraoke_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-localhost = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
url = "2"
urlencoding = "2"
keepawake = "0.5"
sha2 = "0.10"
# Use rustls-tls instead of native-tls to fix macOS TLS connection timeouts with Lrclib API
# See: https://github.com/zalun/karaoke-app/issues/133
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
tauri-plugin-os = "2.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
souvlaki = "0.8"

# Linux uses zbus for MPRIS media controls (pure Rust D-Bus implementation)
[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }

# Windows uses Windows Media Controls (automatic, no special features needed)
[target.'cfg(target_os = "windows")'.dependencies]
souvlaki = "0.8"
